sfdx-project/force-app/main/default/objects/Handoff_Event_Log__c/Handoff_Event_Log__c.object-meta.xml
<CustomObject>
    <label>Handoff Event Log</label>
    <pluralLabel>Handoff Event Logs</pluralLabel>
    <nameField>
        <label>Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>LOG-{0000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>