sfdx-project/force-app/main/default/objects/Handoff_Event_Log__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>