sfdx-project/force-app/main/default/objects/Handoff_Event_Log__c/fields/Automated__c.field-meta.xml
<CustomField>
    <fullName>Automated__c</fullName>
    <label>Automated</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>