sfdx-project/force-app/main/default/objects/Handoff_Event_Log__c/fields/Handoff__c.field-meta.xml
<CustomField>
    <fullName>Handoff__c</fullName>
    <label>Handoff</label>
    <type>Lookup</type>
    <referenceTo>Merchant_Launch_Handoff__c</referenceTo>
    <relationshipLabel>Event Logs</relationshipLabel>
    <relationshipName>Event_Logs</relationshipName>
    <required>true</required>
    <deleteConstraint>Cascade</deleteConstraint>
</CustomField>