sfdx-project/force-app/main/default/objects/Handoff_Event_Log__c/fields/Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Snapshot__c</fullName>
    <label>Snapshot</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>